--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             </p>
     </header>
 
+        <!--input name-->
+        
         <form id="survey-form">
             <div class="form-group">
                 <label id="name-label" for="name">Name</label>
