--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htmal lang="PT-BR">
+<html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
         <title>Survey form</title>
@@ -26,4 +26,4 @@
         </form>
 
 
-</htmal>
+</html>
