--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
                 <input type="text" name="name" id="name" class="form-control"
                  placeholder="Enter your name" required/>
             </div>
+            <div class="form-group">
+                <label id="number-label" for="number">Age</label>
+                <input type="number" name="age" id="number" min="10" max= "99"
+                     class="form-control" placeholder="Age"/>
+             </div>
         </form>
 </html>
