--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Survey form</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
         <link href=link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
 
@@ -14,8 +14,6 @@
                 Thank you for talking the time to help us improve the platform
             </p>
     </header>
-
-        <!--input name-->
         
         <form id="survey-form">
             <div class="form-group">
