--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
-        <title>Survey form</title>
+        <title>Meninas In Tech</title>
         <link rel="stylesheet" href="style.css">
         <link href=link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
 
     <header>
         <div class="container">
-            <h1 id="title" class="text center">FreeCodeCamp Survey form</h1>
+            <h1 id="title" class="text center">Meninas In Tech</h1>
             <p id="description" class="description text">
                 Thank you for talking the time to help us improve the platform
             </p>
@@ -25,6 +25,16 @@
                 <label id="number-label" for="number">Age</label>
                 <input type="number" name="age" id="number" min="10" max= "99"
                      class="form-control" placeholder="Age"/>
+             </div>
+             <div class="form-group">
+                 <p>Which option best describes your current role? </p>
+                 <select id="dropdown" name ="role" class="form-control" required>
+                     <option value="student">Student</option>
+                     <option value="job">Job</option>
+                     <option value="learner">Learner</option>
+                     <option value="preferNo">Prefer not to say</option>
+                     <option value="other">Other</option>
+                 </select>
              </div>
         </form>
 </html>
